[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.14",
    "oldest-supported-numpy"
]

build-backend = "setuptools.build_meta"

# Configuration for cibuildwheel
[tool.cibuildwheel]
test-requires = "pytest"
before-test = "pip install lifelines pandas scikit-survival"
test-command = "pytest {package}/pytest"
# skip cp310-win32 because scipy.whl file not exists in pypi: 
# skip cp37-manylinux_i686 cp38-manylinux_i686 cp39-manylinux_i686 cp310-manylinux_i686 because tests fail but no informative message return 
# test-skip = "*-macosx_arm64 *-macosx_universal2:arm64 cp310-win32 cp37-manylinux_i686 cp38-manylinux_i686 cp39-manylinux_i686 cp310-manylinux_i686"

# Install openmp library
[tool.cibuildwheel.macos]
before-all = "brew install libomp"
