[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.14",
    "oldest-supported-numpy"
]

build-backend = "setuptools.build_meta"

# Configuration for cibuildwheel
[tool.cibuildwheel]
test-requires = "pytest"
before-test = "pip install pandas"
test-command = "pytest {package}/pytest"
skip = "pp* *-musllinux_* cp38-win*"
test-skip = "*-win32 *-manylinux_i686"

# Install openmp library
[tool.cibuildwheel.macos]
before-all = "brew install libomp"
